base/infra/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-internal
  namespace: infra
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.my-homelab.party`)
      kind: Rule
      middlewares:
        - name: local-only
      services:
        - name: api@internal
          kind: TraefikService
